--- a/public/less/theme/helpers/_helper.less
+++ b/public/less/theme/helpers/_helper.less
@@ -301,6 +301,10 @@
     &.section-loader{
       position: absolute;
       z-index: 1;
+      @media screen and (max-width: 650px){
+        position: fixed;
+        z-index: 2;
+      }
     }
 }
 
